[package]
name = "teo-mongodb-connector"
version = "0.2.1-alpha.4"
edition = "2021"
description = "MongoDB connector for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-mongo-connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = "0.2.0"
teo-teon = "0.2.0"
teo-parser = "0.2.0"
teo-runtime = "0.2.1-alpha.4"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
mongodb = { version = "2.8.0" }
async-recursion = "1.0.5"
async-trait = "0.1.74"
maplit = "1.0.2"
indexmap = { version = "2.1.0", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = "=0.3.1"
itertools = "0.12.0"
regex = "1.10.2"
snailquote = "0.3.1"
key-path = "0.2.0"
futures-util = "0.3"
