[package]
name = "teo-mongodb-connector"
version = "0.2.20"
edition = "2021"
description = "MongoDB connector for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-mongo-connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = { version = "0.2.19", path = "../teo-result" }
teo-parser = { version = "0.2.20", path = "../teo-parser" }
teo-runtime = { version = "0.2.20", path = "../teo-runtime" }
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
mongodb = { version = "2.8.1" }
async-recursion = "1.0.5"
async-trait = "0.1.77"
maplit = "1.0.2"
indexmap = { version = "2.2.5", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = "=0.3.1"
itertools = "0.12.0"
regex = "1.10.2"
snailquote = "0.3.1"
key-path = "0.2.0"
futures-util = "0.3"
