[package]
name = "teo-mongodb-connector"
version = "0.3.0"
edition = "2021"
description = "MongoDB connector for Teo"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-mongo-connector"

[dependencies]
teo-result = { version = "0.3.0", path = "../teo-result" }
teo-parser = { version = "0.3.0", path = "../teo-parser" }
teo-runtime = { version = "0.3.0", path = "../teo-runtime" }
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with"] }
mongodb = { version = "2.8.2" }
async-recursion = "1.1"
async-trait = "0.1"
maplit = "1.0.2"
indexmap = { version = "2.6", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = "=0.3.1"
itertools = "0.13.0"
regex = "1.11.1"
snailquote = "0.3.1"
key-path = "0.2.0"
futures-util = "0.3"
